--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,13 @@ body {
 	margin: 0; padding: 0; font-size: 100%;
 }
 
+* { padding: 0; margin: 0;}
+ 
 img { border: 0; }
+
+.clear { clear: both; }
+
+a { font-family: Arial; }
 
 .note { 
 	border: 1px dashed gray; 
@@ -19,3 +25,11 @@ img { border: 0; }
 	font-weight: bold;
 	font-size: 16px;
 }
+
+tr.mceFirst { display: none; }
+
+.topbar { background: #000; color: white; font-size: 11px; }
+
+.navigation { list-style-type: none; padding: 0 0 0 40px;}
+.navigation li { float: left; margin-right: 40px; padding: 10px 0;}
+.navigation li a { color: #FFF; font-size: 14px; }
