--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	margin: 0; padding: 0; font-size: 100%;
+	margin: 0; padding: 0; font-size: 100%; background: url('/i/global/wood.jpg') top center;
 }
 
 * { padding: 0; margin: 0;}
@@ -26,10 +26,14 @@ a { font-family: Arial; }
 	font-size: 16px;
 }
 
-tr.mceFirst { display: none; }
+tr.mceFirst, .ui-icon-gripsmall-diagonal-se { display: none ! important; }
 
 .topbar { background: #000; color: white; font-size: 11px; }
 
 .navigation { list-style-type: none; padding: 0 0 0 40px;}
 .navigation li { float: left; margin-right: 40px; padding: 10px 0;}
 .navigation li a { color: #FFF; font-size: 14px; }
+
+.draggable .close {
+	display: none; position: absolute; width: 28px; height: 28px; top: -14px; right: -14px; cursor: pointer; background: url( '/i/global/close.png') top left; z-index: 9999;
+}
