--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ img { border: 0; }
 
 a { font-family: Arial; }
 
+.graytext {
+	color: #999;
+}
+
 .note { 
 	border: 1px dashed gray; 
 	padding: 20px;
@@ -36,4 +40,29 @@ tr.mceFirst, .ui-icon-gripsmall-diagonal-se { display: none ! important; }
 
 .draggable .close {
 	display: none; position: absolute; width: 28px; height: 28px; top: -14px; right: -14px; cursor: pointer; background: url( '/i/global/close.png') top left; z-index: 9999;
+}
+
+.loginform {
+	background: #FFF;
+	width: 300px;
+	height: 150px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -75px;
+	margin-left: -150px;
+	padding: 30px;
+}
+
+.loginform div {
+	padding: 10px 0;
+}
+
+.loginform input[type="text"], input[type="password"] {
+	padding: 5px 3px;
+	width: 290px;
+}
+
+.loginform input[type="submit"] {
+	padding: 5px 15px;
 }
